# norma-robot

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
software/ai/smolvla_py/: pyproject.toml
software/ai/smolvla_py/scripts/: train.py
software/drivers/inferences/src/formats/: normvla.rs
software/drivers/st3215/src/: driver.rs  port.rs  state.rs
software/station/clients/station-viewer/src/components/: Navigation.tsx
software/station/clients/station-viewer/src/pages/: HomePage.tsx
software/station/examples/: read_tags.py
software/station/examples/color-sorting/: color_sort.py
software/station/examples/gesture/: gesture_test.py  oracle.py  oracle_simple.py  oracle_web.py
software/station/examples/oracle/: oracle.py
software/station/examples/st3215-remote-teleop-py/: README.md
